fix: small codebase fixes

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,14 +5,10 @@
 # Supabase Private (Required)
     SUPABASE_SERVICE_ROLE_KEY=
 
-# API Keys (Required)
-    # For Plugins, Enhance Search, Moderation
-        OPENROUTER_API_KEY=
-    # For Reason LLM, PGPT-Small
-        DEEPSEEK_API_KEY=
-    # For Small Model and Large Model
+# API Keys
+    # For Small Model, Large Model and Enhance Search (Required)
         MISTRAL_API_KEY=
-    # For PentestGPT-4o
+    # For PentestGPT-4o, Plugins, and Moderation (Required)
         OPENAI_API_KEY=
     # For Reasoning Model (Optional)
         # DEEPSEEK_API_KEY=
