--- a/.env.local.example
+++ b/.env.local.example
@@ -37,34 +37,26 @@
 # Rate Limiter Settings (Optional)
     RATELIMITER_ENABLED=false
     # RATELIMITER_TIME_WINDOW_MINUTES=180
-    # PGPT-Small (Upstash)
-        # RATELIMITER_LIMIT_PENTESTGPT_FREE=3
+    # Small Model (Upstash)
+        # RATELIMITER_LIMIT_PENTESTGPT_FREE=15
         # RATELIMITER_LIMIT_PENTESTGPT_PREMIUM=100
-        # RATELIMITER_LIMIT_PENTESTGPT_TEAM=140
-    # PGPT-Large (Upstash)
-        # RATELIMITER_LIMIT_PENTESTGPT_PRO_PREMIUM=60
-        # RATELIMITER_LIMIT_PENTESTGPT_PRO_TEAM=80
+    # Large Model (Upstash)
+        # RATELIMITER_LIMIT_PENTESTGPT_PRO_PREMIUM=40
     # PentestGPT-4o (Upstash)
         # RATELIMITER_LIMIT_GPT_4_PREMIUM=40
-        # RATELIMITER_LIMIT_GPT_4_TEAM=60
     # Reasoning model including reasoning web search (Upstash)
         # RATELIMITER_LIMIT_REASONING_FREE=5
         # RATELIMITER_LIMIT_REASONING_PREMIUM=25
-        # RATELIMITER_LIMIT_REASONING_TEAM=50
     # Text to Speech (Upstash)
         # RATELIMITER_LIMIT_TTS_1_PREMIUM=40
-        # RATELIMITER_LIMIT_TTS_1_TEAM=80
     # Speech to Text (Upstash)
         # RATELIMITER_LIMIT_STT_1_PREMIUM=40
-        # RATELIMITER_LIMIT_STT_1_TEAM=80
     # Terminal (Upstash)
         # RATELIMITER_LIMIT_TERMINAL_FREE=3
         # RATELIMITER_LIMIT_TERMINAL_PREMIUM=20
-        # RATELIMITER_LIMIT_TERMINAL_TEAM=40
     # Fragment (Upstash)
         # FRAGMENTS_RELOAD_LIMIT=100
         # RATELIMITER_LIMIT_FRAGMENTS_PREMIUM=20
-        # RATELIMITER_LIMIT_FRAGMENTS_TEAM=40
     # Other
         # NEXT_PUBLIC_RATELIMITER_LIMIT_FILES=100
         # File size limit for uploads in bytes (Required)
