--- a/.env.local.example
+++ b/.env.local.example
@@ -47,6 +47,8 @@
     # Reasoning model including reasoning web search (Upstash)
         # RATELIMITER_LIMIT_REASONING_FREE=5
         # RATELIMITER_LIMIT_REASONING_PREMIUM=25
+    # Deep Research (Upstash)
+        # RATELIMITER_LIMIT_DEEP_RESEARCH_PREMIUM=5
     # Text to Speech (Upstash)
         # RATELIMITER_LIMIT_TTS_1_PREMIUM=40
     # Speech to Text (Upstash)
