refactor: use anthropic api for all large model requests

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,8 +8,10 @@
 # API Keys
     # For Small Model, Large Model and Enhance Search (Required)
         MISTRAL_API_KEY=
-    # For GPT-4o, Plugins, and Moderation (Required)
-        OPENAI_API_KEY=
+    # For GPT-4o, Plugins, and Moderation (Optional)
+        # OPENAI_API_KEY=
+    # For Large Model (Optional)
+        # ANTHROPIC_API_KEY=
     # For Reasoning Model (Optional)
         # OPENROUTER_API_KEY=
     # For Web Search & Reasoning Web Search (Optional)
