refactor: small changes

--- a/.env.local.example
+++ b/.env.local.example
@@ -19,7 +19,7 @@
 
 # LLMs (Required)
     # Small Model
-        OPENROUTER_PENTESTGPT_DEFAULT_MODEL=deepseek/deepseek-chat
+        OPENROUTER_PENTESTGPT_DEFAULT_MODEL=mistral-small-latest
     # Large Model
         OPENROUTER_PENTESTGPT_PRO_MODEL=anthropic/claude-3.7-sonnet
     # For Enhance Search
@@ -37,30 +37,30 @@
 # Rate Limiter Settings (Optional)
     RATELIMITER_ENABLED=false
     # RATELIMITER_TIME_WINDOW_MINUTES=180
-    # Small Model
+    # Small Model (Upstash)
         # RATELIMITER_LIMIT_PENTESTGPT_FREE=15
         # RATELIMITER_LIMIT_PENTESTGPT_PREMIUM=100
-    # Large Model
-        # RATELIMITER_LIMIT_PENTESTGPT_PRO_PREMIUM=25
-    # GPT-4o
+    # Large Model (Upstash)
+        # RATELIMITER_LIMIT_PENTESTGPT_PRO_PREMIUM=40
+    # GPT-4o (Upstash)
         # RATELIMITER_LIMIT_GPT_4_PREMIUM=40
-    # Reasoning Web Search, Web Search and Reasoning model
-        RATELIMITER_LIMIT_PRO_QUERIES_FREE=5
-        RATELIMITER_LIMIT_PRO_QUERIES_PREMIUM=25
-    # Deep Research
+    # Reasoning model including reasoning web search (Upstash)
+        # RATELIMITER_LIMIT_REASONING_FREE=5
+        # RATELIMITER_LIMIT_REASONING_PREMIUM=25
+    # Deep Research (Upstash)
         # RATELIMITER_LIMIT_DEEP_RESEARCH_PREMIUM=5
-    # Text to Speech
+    # Text to Speech (Upstash)
         # RATELIMITER_LIMIT_TTS_1_PREMIUM=40
-    # Speech to Text
+    # Speech to Text (Upstash)
         # RATELIMITER_LIMIT_STT_1_PREMIUM=40
-    # Terminal
-        # RATELIMITER_LIMIT_TERMINAL_FREE=5
-        # RATELIMITER_LIMIT_TERMINAL_PREMIUM=25
-    # Fragment
+    # Terminal (Upstash)
+        # RATELIMITER_LIMIT_TERMINAL_FREE=3
+        # RATELIMITER_LIMIT_TERMINAL_PREMIUM=20
+    # Fragment (Upstash)
         # FRAGMENTS_RELOAD_LIMIT=100
         # RATELIMITER_LIMIT_FRAGMENTS_PREMIUM=20
     # Other
-        # NEXT_PUBLIC_RATELIMITER_LIMIT_FILES=500
+        # NEXT_PUBLIC_RATELIMITER_LIMIT_FILES=100
 
 # Message Size Limit for frontend and backend (Optional)
     # in characters. If the message in the assistant's response for the plugin is bigger than that, it will be truncated to MESSAGE_SIZE_KEEP. Default is 12000
