--- a/.env.local.example
+++ b/.env.local.example
@@ -21,7 +21,7 @@
     # Small Model
         OPENROUTER_PENTESTGPT_DEFAULT_MODEL=mistral-small-latest
     # Large Model
-        OPENROUTER_PENTESTGPT_PRO_MODEL=anthropic/claude-3.7-sonnet
+        OPENROUTER_PENTESTGPT_PRO_MODEL=mistral-large-2411
     # For Enhance Search
         OPENROUTER_STANDALONE_QUESTION_MODEL=mistral-small-latest
 
