--- a/.env.local.example
+++ b/.env.local.example
@@ -37,26 +37,26 @@
 # Rate Limiter Settings (Optional)
     RATELIMITER_ENABLED=false
     # RATELIMITER_TIME_WINDOW_MINUTES=180
-    # Small Model (Upstash)
+    # Small Model
         # RATELIMITER_LIMIT_PENTESTGPT_FREE=15
         # RATELIMITER_LIMIT_PENTESTGPT_PREMIUM=100
-    # Large Model (Upstash)
-        # RATELIMITER_LIMIT_PENTESTGPT_PRO_PREMIUM=40
-    # GPT-4o (Upstash)
+    # Large Model
+        # RATELIMITER_LIMIT_PENTESTGPT_PRO_PREMIUM=60
+    # GPT-4o
         # RATELIMITER_LIMIT_GPT_4_PREMIUM=40
-    # Reasoning model including reasoning web search (Upstash)
+    # Reasoning model including reasoning web search
         # RATELIMITER_LIMIT_REASONING_FREE=5
         # RATELIMITER_LIMIT_REASONING_PREMIUM=25
-    # Deep Research (Upstash)
+    # Deep Research
         # RATELIMITER_LIMIT_DEEP_RESEARCH_PREMIUM=5
-    # Text to Speech (Upstash)
+    # Text to Speech
         # RATELIMITER_LIMIT_TTS_1_PREMIUM=40
-    # Speech to Text (Upstash)
+    # Speech to Text
         # RATELIMITER_LIMIT_STT_1_PREMIUM=40
-    # Terminal (Upstash)
+    # Terminal
         # RATELIMITER_LIMIT_TERMINAL_FREE=3
         # RATELIMITER_LIMIT_TERMINAL_PREMIUM=20
-    # Fragment (Upstash)
+    # Fragment
         # FRAGMENTS_RELOAD_LIMIT=100
         # RATELIMITER_LIMIT_FRAGMENTS_PREMIUM=20
     # Other
