--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@e2b/code-interpreter": "^1.2.0-beta.1",
     "@headlessui/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.0",
     "@langchain/community": "^0.3.37",
     "@marsidev/react-turnstile": "^1.1.0",
     "@mendable/firecrawl-js": "^1.21.0",
@@ -77,7 +78,9 @@
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.2",
     "endent": "^2.1.0",
     "gpt-tokenizer": "^2.9.0",
     "husky": "^9.1.7",
@@ -94,11 +97,14 @@
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.8",
+    "recharts": "^2.15.1",
     "rehype-mathjax": "^7.1.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
@@ -108,6 +114,7 @@
     "tailwindcss": "^4.0.17",
     "use-stick-to-bottom": "^1.0.48",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
