--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "openai": "^4.94.0",
+    "p-queue": "^8.1.0",
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.3",
     "posthog-js": "^1.236.0",
