feat: image gen tool (#1087)
* feat: initial code for image gen tool

* feat: allow AI to see generated images

* refactor: improve image gen

* refactor: improve image handling

* fix: show correctly assistantImages after handleCreateMessages

--- a/.env.local.example
+++ b/.env.local.example
@@ -39,6 +39,8 @@
         # RATELIMITER_LIMIT_TERMINAL_PREMIUM=25
     # Deep Research
         # RATELIMITER_LIMIT_DEEP_RESEARCH_PREMIUM=10
+    # Image Generation
+        # RATELIMITER_LIMIT_IMAGE_GEN_PREMIUM=10
 
 # Override Subscription Type
     # NEXT_PUBLIC_OVERRIDE_SUBSCRIPTION_TYPE=pro
